# evectl

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE.txt  Makefile  README.md  build.rs
.github/workflows/: build.yml
src/: actions.rs  config.rs  configs.rs  container.rs  context.rs  elastic.rs  http.rs  lib.rs  logs.rs  main.rs  menus.rs  prelude.rs  prompt.rs  selfupdate.rs  service.rs  suricata.rs  system.rs  systemd.rs  term.rs  windows.rs
src/evebox/: agent.rs  mod.rs  server.rs
src/menu/: advanced.rs  configure.rs  containers.rs  elastic.rs  evebox.rs  evebox_agent.rs  evebox_server.rs  mod.rs  other.rs  suricata.rs  suricata_update.rs  wizard.rs
src/windows/: mod.rs
