[package]
name = "evectl"
version = "0.2.0"
authors = ["Jason Ish <jason@codemonkey.net>"]
edition = "2024"
description = "EveCtl with Suricata and EveBox"
homepage = "https://evebox.org/evectl/"
repository = "https://github.com/jasonish/evectl"
license = "MIT"
rust-version = "1.88.0"

# Some tweaks to reduce binary size.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "color"] }
colored = "3.1.1"
crossterm = "0.29.0"
ctrlc = "3.5.1"
dirs = "5.0"
indicatif = "0.17.10"
inquire = "0.7.5"
libc = "0.2.182"
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
semver = "1.0.27"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.26.0"
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["time", "local-time"] }
zip = "2.2"

# Only used for logging in local time.
time = { version = "0.3.47", features = ["macros"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Com"] }
