[package]
name = "evectl"
# major.minor is the release "generation"; the patch is synthesized at build
# time as the commit date (see build.rs). Bump only at generation boundaries.
version = "0.3.0"
authors = ["Jason Ish <jason@codemonkey.net>"]
edition = "2024"
description = "EveCtl with Suricata and EveBox"
homepage = "https://evebox.org/evectl/"
repository = "https://github.com/jasonish/evectl"
license = "MIT"
rust-version = "1.88.0"

# Some tweaks to reduce binary size.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "color"] }
colored = "3.1.1"
crossterm = "0.29.0"
ctrlc = "3.5.1"
inquire = "0.9.4"
libc = "0.2.182"
regex = "1.12.3"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls-no-provider"] }
# Keep ring as the TLS crypto provider (reqwest's default is aws-lc-rs,
# which adds ~2MB to the binary). Requires installing the provider at
# startup, see main().
rustls = { version = "0.23.42", default-features = false, features = ["ring", "logging", "std", "tls12"] }
semver = "1.0.27"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
tempfile = "3.26.0"
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["time", "local-time"] }
# Bundled Mozilla root certificates, merged with the system trust store so
# HTTPS works even on hosts without ca-certificates installed. See http.rs.
webpki-root-certs = "1.0.9"

# Only used for logging in local time.
time = { version = "0.3.47", features = ["macros"] }
